force-app/main/default/objects/MY_Partner__c/fields/autoid__c.field-meta.xml
<CustomField>
    <fullName>autoid__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>autoid</label>
    <type>AutoNumber</type>
</CustomField>