force-app/main/default/objects/MY_Partner__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>