force-app/main/default/objects/MY_Partner__c/fields/fax__c.field-meta.xml
<CustomField>
    <fullName>fax__c</fullName>
    <label>fax</label>
    <length>10</length>
    <type>Text</type>
</CustomField>