force-app/main/default/objects/MY_Partner__c/fields/Foxtel_Description__c.field-meta.xml
<CustomField>
    <fullName>Foxtel_Description__c</fullName>
    <label>Foxtel Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>