force-app/main/default/objects/MY_Partner__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>phone number</label>
    <type>Phone</type>
</CustomField>